--- a/src/index.css
+++ b/src/index.css
@@ -12,3 +12,18 @@ body {
   font-family: "Roboto", sans-serif;
   background-color: #f5f5f5ff;
 }
+
+input[type="range"] {
+  -webkit-appearance: none;
+  width: 100%;
+  margin-bottom: 13.8px;
+  background-color: #e8e8e8ff;
+}
+
+input[type="range"]::-webkit-slider-thumb {
+  appearance: none;
+  width: 10px;
+  height: 10px;
+  border-radius: 30px;
+  background-color: #46c7b6ff;
+}
