Completed Main section

--- a/src/index.css
+++ b/src/index.css
@@ -27,3 +27,16 @@ input[type="range"]::-webkit-slider-thumb {
   border-radius: 30px;
   background-color: #46c7b6ff;
 }
+
+.scroll-hide {
+  scroll-behavior: smooth;
+  transition: scroll-snap-type 0.5s cubic-bezier(0.645, 0.045, 0.355, 1);
+  scroll-snap-type: x mandatory;
+  scroll-padding: 0 20px;
+  animation-delay: 0.5s;
+}
+
+.scroll-hide::-webkit-scrollbar {
+  width: 0px;
+  background: transparent;
+}
